<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tela_login"
    tools:context="com.example.hackathon.daki.View.LoginActivity">


    <include
        android:id="@+id/barDaki"
        layout="@layout/app_bar">

    </include>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtNicknameLoginksfix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtPassLoginksfix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barDaki"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/txtNicknameLoginks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/apelido_ou_e_mail"
            android:inputType="textMultiLine|textEmailAddress"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:textColorHint="?attr/colorButtonNormal" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtPassLoginksfix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginEntrarks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/txtPassLoginks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/senha"
            android:inputType="textMultiLine|textPassword"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:textColorHint="?attr/colorButtonNormal" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnLoginEntrarks"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="@color/frontEntrar"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginCreateks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnLoginCreateks"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="@color/frontVoltar"
        android:onClick="criarAcc"
        android:text="@string/CriarUmaConta"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <!--</RelativeLayout>-->


</android.support.constraint.ConstraintLayout>
